# web_agency

./: README.md  pyproject.toml
fara.ai-frontend/: Users:.fileloc  eslint-report.json  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  sonar-project.properties
fara.ai-frontend/.scannerwork/: report-task.txt
fara.ai-frontend/.sonarlint/: connectedMode.json
fara.ai-frontend/src/app/: globals.css  layout.jsx
fara.ai-frontend/src/app/(auth)/: layout.jsx
fara.ai-frontend/src/app/(auth)/login/: page.jsx
fara.ai-frontend/src/app/(main)/: layout.jsx  page.jsx
fara.ai-frontend/src/app/(main)/wireframe/: index.jsx
fara.ai-frontend/src/components/: Footer.jsx  Header.jsx  LoginForm.jsx  LoginImage.jsx  accountMenu.jsx  helpNavigation.jsx  logo.jsx  mainNavigation.jsx  sidebar.jsx
fara.ai-frontend/src/styles/components/: LoginForm.module.scss  LoginImage.module.scss  accountMenu.module.scss  logo.module.scss  navigation.module.scss  sidebar.module.scss
fara.ai-frontend/src/styles/global/: layout.module.scss  styleguide.scss
fara.ai-frontend/src/styles/pages/: home.module.scss  login.module.scss
knowledge/: api_documentation.json  styleguide.css
src/web_agency/: crew.py  main.py  requirements.md
src/web_agency/config/: agents.yaml  tasks.yaml
src/web_agency/db/ef10721b-b34a-40d4-9576-3700ad53b54d/: index_metadata.pickle
src/web_agency/tools/: controlnet_tool.py  saveimage_tool.py  startappandscreenshot_tool.py  wireframe_tool.py
src/web_agency/wireframes/: wireframe.html  wireframe_validation.md
