[project]
name = "web_agency"
version = "0.1.0"
description = "web-agency using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
web_agency = "web_agency.main:run"
run_crew = "web_agency.main:run"
train = "web_agency.main:train"
replay = "web_agency.main:replay"
test = "web_agency.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
